--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,203 +1,308 @@
-    @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        font-family: "Roboto", sans-serif;
-    }
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Roboto", sans-serif;
+}
 
-    body {
-        background-color: #F7F9F2;
-        
-    }
-
-
-    /* nav bar */
-    #nav-container {
-        position: absolute;
-        height: 100%;
-        left: 0;
-        top: 0;
-    }
-
-    .slide {
-        height: 100%;
-        width: 200px;
-        position: absolute;
-        background-color: #B0EBB4;
-        transition: 0.5s ease;
-        box-shadow: 2px 2px 10px #384f3a;
-        display: none;
-    }
-
-    .slide > h1 {
-        color: #384f3a;
-        font-weight: 800;
-        text-align: center;
-        padding: 20px;
-        pointer-events: none;
-    }
-
-    #nav-list li {
-        border: 2px solid #9bd59e;
-        border-radius: 5px;
-        list-style: none;
-        font-size: 20px;
-        padding: 10px 15px;
-        margin-bottom: 5px;
+body {
+    background-color: #F7F9F2;
     
-    }
-
-    #nav-list > li  i {
-        margin-right: 10px;
-        color: #384f3a;
-    }
-
-    #nav-list > li:hover {
-        background-color: #f7f9f28a;
-        cursor: pointer;
-    }
-
-    #menu-btn {
-        height: 50px;
-        width: 70px;
-        font-size: 24px;
-        margin: 20px 20px;
-        background-color: #9bd59e;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        position: absolute;
-    }
-
-    #nav-container:hover .slide{
-        display: block;
-    }
-
-    /* dashboard */
-
-    #dashboard-container{
-        display: grid;
-        gap: 30px;
-        grid-template-columns: repeat(10, 1fr);
-        grid-template-rows: repeat(10, 1fr);
-        width: 100%;
-        height: 100vh;
-    }
-
-    #dashboard-header {
-        display: grid;
-        grid-template-columns: repeat(5, 1fr);
-        grid-template-rows: repeat(3, 1fr);
-        gap: 10px;
-        grid-area: 2 / 3 / 6 / 10;
-        background-color: #E0FBE2;
-        border-radius: 10px;
-
-    }
-    /* profile div */
-    #profile {
-        display: flex;
-        grid-area: 1 / 1 / 4 / 4;
-        padding: 30px 20px 20px 40px;
-    }
-
-    #profile > img {
-        width: 170px;
-        height: 170px;
-        border-radius: 8px;
-        box-shadow: 2px 2px 10px #F7F9F2;
-        margin-right: 30px;
-    }
-
-    #info {
-        height: 170px;
-    }
-
-    #edit-btn {
-        height: fit-content;
-        width: fit-content;
-        font-size: 12px;
-        border-radius: 5px;
-        padding: 5px 20px;
-        border: 2px solid #ACE1AF;
-        box-shadow: 2px 2px 2px #ACE1AF;
-        margin-bottom: 10px;
-    }
-
-    #name {
-        font-size: 2rem;
-        font-weight: 900;
-    }
-
-    #avg {
-        display: flex;
-        justify-content: space-around;
-        height: 100px;
-        width: 100%;
-    }
-
-    #avg > div{
-        display: flex;
-        flex-direction: column;
-        width: 50%;
-        margin-top: 20px;
-        margin-right: 10px;
-    }
-
-    .avg-item > h3{
-        font-size: 12px;
-        width: fit-content;
-        height: fit-content;
-        padding: 5px 10px;
-        border: none;
-        border-radius: 10px;
-    }
-
-    #income > h3{
-        background-color: #B0EBB4;
-    }
-
-    #expenses > h3{
-        background-color: #FF6969;
-    }
-
-    .avg-item > p {
-        height: 100px;
-        padding: 20px 0 0 30px;
-        border-bottom: 2px solid #384f3a;
-        font-size: 16px;
-        font-weight: 800;
-
-    }
+}
 
 
-    /* chart */
+/* nav bar */
+#nav-container {
+    position: absolute;
+    height: 100%;
+    left: 0;
+    top: 0;
+}
 
-    #chart {
-        display: flex;
-        align-items: center;
-        grid-area: 1 / 4 / -1 / -1;
-    }
+.slide {
+    height: 100%;
+    width: 200px;
+    position: absolute;
+    background-color: #B0EBB4;
+    transition: 0.5s ease;
+    box-shadow: 2px 2px 10px #384f3a;
+    display: none;
+}
 
-    #myChart {
-        height: 80%;
-        width: 100%;
-        max-width: 500px;
-    }
+.slide > h1 {
+    color: #384f3a;
+    font-weight: 800;
+    text-align: center;
+    padding: 20px;
+    pointer-events: none;
+}
 
-    #dashboard-history {
-        grid-area: 6 / 3 / 10 / 7;
-        border: 2px solid red;
-    }
+#nav-list li {
+    border: 2px solid #9bd59e;
+    border-radius: 5px;
+    list-style: none;
+    font-size: 20px;
+    padding: 10px 15px;
+    margin-bottom: 5px;
 
-    #add-option{
-        grid-area: 6 / 7 / 8 / 10;
-        border: 2px solid red;
-    }
+}
 
-    #total-summary{
-        grid-area: 8 / 7 / 10 / 10;
-        border: 2px solid red;
-    }
+#nav-list > li  i {
+    margin-right: 10px;
+    color: #384f3a;
+}
+
+#nav-list > li:hover {
+    background-color: #f7f9f28a;
+    cursor: pointer;
+}
+
+#menu-btn {
+    height: 50px;
+    width: 70px;
+    font-size: 24px;
+    margin: 20px 20px;
+    background-color: #9bd59e;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    position: absolute;
+}
+
+#nav-container:hover .slide{
+    display: block;
+}
+
+/* dashboard */
+
+#dashboard-container{
+    display: grid;
+    gap: 30px;
+    grid-template-columns: repeat(10, 1fr);
+    grid-template-rows: repeat(10, 1fr);
+    width: 100%;
+    height: 100vh;
+}
+
+#dashboard-header {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 10px;
+    grid-area: 2 / 3 / 6 / 10;
+    background-color: #E0FBE2;
+    border-radius: 10px;
+
+}
+/* profile div */
+#profile {
+    display: flex;
+    grid-area: 1 / 1 / 4 / 4;
+    padding: 30px 20px 20px 40px;
+}
+
+#profile > img {
+    width: 170px;
+    height: 170px;
+    border-radius: 8px;
+    box-shadow: 2px 2px 10px #F7F9F2;
+    margin-right: 30px;
+}
+
+#info {
+    height: 170px;
+}
+
+#edit-btn {
+    height: fit-content;
+    width: fit-content;
+    font-size: 12px;
+    border-radius: 5px;
+    padding: 5px 20px;
+    border: 2px solid #ACE1AF;
+    box-shadow: 2px 2px 2px #ACE1AF;
+    margin-bottom: 10px;
+    transition: ease-in 0.3s;
+}
+
+#edit-btn:hover {
+    background-color: #ACE1AF;
+    box-shadow: 2px 2px 10px #ACE1AF;
+}
+
+#name {
+    font-size: 2rem;
+    font-weight: 900;
+}
+
+#avg {
+    display: flex;
+    justify-content: space-around;
+    height: 100px;
+    width: 100%;
+}
+
+#avg > div{
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    margin-top: 20px;
+    margin-right: 10px;
+}
+
+.avg-item > h3{
+    font-size: 12px;
+    width: fit-content;
+    height: fit-content;
+    padding: 5px 10px;
+    border: none;
+    border-radius: 10px;
+}
+
+#income > h3{
+    background-color: #B0EBB4;
+}
+
+#expenses > h3{
+    background-color: #FF6969;
+}
+
+.avg-item > p {
+    height: 100px;
+    padding: 20px 0 0 30px;
+    border-bottom: 2px solid #384f3a;
+    font-size: 16px;
+    font-weight: 800;
+
+}
+
+
+/* chart */
+
+#chart {
+    display: flex;
+    align-items: center;
+    grid-area: 1 / 4 / -1 / -1;
+}
+
+#pieChart {
+    height: 80%;
+    width: 100%;
+    max-width: 700px;
+}
+
+/* quick actions */
+
+#quick-action{
+    grid-area: 6 / 7 / 8 / 10;
+    display: flex;
+    justify-content: space-between;
+    padding: 15px;
+    background-color: #ACE1AF;
+    border-radius: 10px;
+}
+
+.actions {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 32%;
+    border-radius: 10px;
+    background-color: #D6EFD8;
+}
+
+.actions:hover {
+    background-color: #E0FBE2;
+}
+
+.actions > i {
+    font-size: 28px;
+    padding-bottom: 5px;
+}
+
+/* chart */
+
+#total-summary{
+    display: flex;
+    justify-content: space-between;
+    grid-area: 8 / 7 / 10 / 10;
+    
+}
+
+#total-summary > div {
+    display: flex;
+    flex-direction: column;
+    width: 32%;
+    height: 100%;
+    background-color: #9bd59e;
+    border-radius: 5px;
+    padding: 17px;
+}
+
+.title {
+    display: flex;
+    height: 1rem;
+    margin-bottom: 20px;
+}
+
+.title > p {
+    font-size: .8rem;
+    font-weight: 600;
+    margin-left: 10px;
+}
+
+.title > i {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 25px;
+    height: 25px;
+    border: 1px solid black;
+    border-radius: 50%;
+}
+
+.total-container > h3 {
+    text-align: center;
+
+}
+
+/* dashboard history */
+
+
+#dashboard-history {
+    grid-area: 6 / 3 / 10 / 7;
+    display: flex;
+    flex-direction: column;
+    background-color: #B0EBB4;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+#dashboard-history > h3 {
+    font-size: 20px;
+    font-weight: 500;
+    margin-bottom: 10px;
+    padding-left: 5px;
+    padding-top: 5px;
+    
+}
+
+#dashboard-history > table {
+    width: 100%;
+}
+
+#dashboard-history > table th {
+    background-color: #384f3a;
+    color:#E0FBE2;
+    border-radius: 5px;
+}
+
+#dashboard-history > table td {
+    background-color: #E0FBE2;
+    border-radius: 5px;
+    text-align: center;
+    padding-top: 5px;
+}
