--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,20 +22,69 @@
             </div>
 
             <div id="chart">
-                <canvas id="myChart"></canvas>
+                <canvas id="pieChart"></canvas>
             </div>
         </div>
         
         <div id="dashboard-history">
+            <h3>Recent Activity: </h3>
+            <table id="table">
+                <tr id="tbl-title">
+                    <th>Date</th>
+                    <th>Type</th>
+                    <th>Amount</th>
+                    <th>Category</th>
+                </tr>
 
+                <tr>
+                    <td>Date</td>
+                    <td>Budget</td>
+                    <td>Expenses</td>
+                    <td>tag</td>
+                </tr>
+            </table>
         </div>
 
-        <div id="add-option">
-
+        <div id="quick-action">
+            <div class="actions">
+                <i class="fa-solid fa-plus"></i>
+                <p>add</p>
+            </div>
+            <div class="actions">
+                <i class="fa-solid fa-pen"></i>
+                <p>edit</p>
+            </div>
+            <div class="actions">
+                <i class="fa-solid fa-trash-can"></i>
+                <p>delete</p>
+            </div>
         </div>
 
         <div id="total-summary">
+            <div class="total-container">
+                <div class="title">
+                    <i class="fa-solid fa-hand-holding-dollar"></i>
+                    <p>Income</p>
+                </div>
+                <h3>12345</h3>
 
+            </div>
+
+            <div class="total-container">
+                <div class="title">
+                    <i class="fa-solid fa-coins"></i>
+                    <p>Budget</p>
+                </div>
+                <h3>12345</h3>
+            </div>
+
+            <div class="total-container">
+                <div class="title">
+                    <i class="fa-solid fa-circle-dollar-to-slot"></i>
+                    <p>Expenses</p>
+                </div>
+                <h3>12345</h3>
+            </div>
         </div>
     </div>
 
