--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -9,7 +9,6 @@
 
 body {
     background-color: #F7F9F2;
-    
 }
 
 
@@ -60,15 +59,39 @@ body {
 }
 
 #menu-btn {
-    height: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
     width: 70px;
     font-size: 24px;
-    margin: 20px 20px;
+    padding: 30px 0;
     background-color: #9bd59e;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     position: absolute;
+}
+
+#btn-list {
+    margin-top: 20px;
+    width: 100%;
+}
+
+#btn-list li{
+    border: 2px solid #9bd59e;
+    border-radius: 5px;
+    list-style: none;
+    font-size: 24px;
+    padding: 10px 15px;
+    width: 100%;
+}
+
+
+
+
+.currently {
+    background-color: rgba(197, 232, 217, 0.8);
 }
 
 #nav-container:hover .slide{
@@ -282,6 +305,7 @@ body {
 }
 
 #dashboard-history > h3 {
+    width: fit-content;
     font-size: 20px;
     font-weight: 500;
     margin-bottom: 10px;
