--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,21 +6,31 @@
     <title>Expense Tracker</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/add.css">
     <script
     src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js">
     </script>
 </head>
 <body>
     <div id="nav-container">
-        <button id="menu-btn"><i class="fa-solid fa-bars"></i></button>
+        <button id="menu-btn">
+            <i class="fa-solid fa-ellipsis"></i>
+            <ul id="btn-list">
+                <li><i class="fa-solid fa-house"></i></li>
+                <li><i class="fa-solid fa-money-check-dollar"></i></li>
+                <li><i class="fa-solid fa-money-check"></i></li>
+                <li><i class="fa-solid fa-clock-rotate-left"></i></li>
+                <li><i class="fa-solid fa-chart-simple"></i></li>
+            </ul>
+        </button>
         <div class="slide">
             <h1>MENU</h1>
             <ul id="nav-list">
-                <li class="active"><a href="#"><i class="fa-solid fa-house"></i></i></a>Home</li>
-                <li><a href="#"><i class="fa-solid fa-money-check-dollar"></i></a>New Expenses</li>
-                <li><a href="#"><i class="fa-solid fa-money-check"></i></a>Add budget</li>
-                <li><a href="#"><i class="fa-solid fa-clock-rotate-left"></i></a>History</li>
-                <li><a href="#"><i class="fa-solid fa-chart-simple"></i></a>View Insights</li>
+                <li class="active" id="home"><i class="fa-solid fa-house"></i></i>Home</li>
+                <li><i class="fa-solid fa-money-check-dollar"></i>New Expenses</li>
+                <li><i class="fa-solid fa-money-check"></i>Add budget</li>
+                <li><i class="fa-solid fa-clock-rotate-left"></i>History</li>
+                <li><i class="fa-solid fa-chart-simple"></i>View Insights</li>
             </ul>
         </div>
     </div>
